[package]
name = "bevy_cam_gizmo"
version = "0.1.0"
authors = ["Black Phlox <bphlox@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy_mod_picking = "0.9"
#bevy_mod_raycast = "0.6"
bevy_dolly = { path = "../bevy_dolly" }

[dependencies.bevy]
version = "0.8"
features = ["render"]
default-features = false

[dev-dependencies.bevy]
version = "0.8"
features = ["bevy_asset", "bevy_scene", "bevy_winit", "bevy_gltf", "png"]
default-features = false

